; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_sort_ref_list.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_sort_ref_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref = type { i32 }

@ref_list_get_next = common dso_local global i32 0, align 4
@ref_list_set_next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sort_ref_list(%struct.ref** %0, i32 (i8*, i8*)* %1) #0 {
  %3 = alloca %struct.ref**, align 8
  %4 = alloca i32 (i8*, i8*)*, align 8
  store %struct.ref** %0, %struct.ref*** %3, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %4, align 8
  %5 = load %struct.ref**, %struct.ref*** %3, align 8
  %6 = load %struct.ref*, %struct.ref** %5, align 8
  %7 = load i32, i32* @ref_list_get_next, align 4
  %8 = load i32, i32* @ref_list_set_next, align 4
  %9 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %4, align 8
  %10 = call %struct.ref* @llist_mergesort(%struct.ref* %6, i32 %7, i32 %8, i32 (i8*, i8*)* %9)
  %11 = load %struct.ref**, %struct.ref*** %3, align 8
  store %struct.ref* %10, %struct.ref** %11, align 8
  ret void
}

declare dso_local %struct.ref* @llist_mergesort(%struct.ref*, i32, i32, i32 (i8*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
